kubernetes/apps/dashy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
    app.kubernetes.io/part-of: dashy
