kubernetes/apps/dashy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/name: dashy
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: dashy
